fixes for alignment with figma

--- a/src/components/adapters/carbon/Accordion/Accordion.css
+++ b/src/components/adapters/carbon/Accordion/Accordion.css
@@ -25,6 +25,7 @@
 
 /* Item styles - remove all borders from items */
 .recursica-accordion.carbon-accordion .cds--accordion__item {
+  padding: 0 !important;
   background: var(--accordion-item-header-bg-collapsed) !important;
   border-radius: var(--accordion-item-border-radius) !important;
   border: none !important;
@@ -38,7 +39,7 @@
 }
 
 .recursica-accordion.carbon-accordion .cds--accordion__item[data-divider='true'] {
-  border-bottom: 1px solid var(--accordion-item-divider-color) !important;
+  border-bottom: var(--accordion-item-divider-size, 1px) solid var(--accordion-item-divider-color) !important;
   border-top: none !important;
   border-left: none !important;
   border-right: none !important;
@@ -163,8 +164,7 @@
 }
 
 .recursica-accordion.carbon-accordion .cds--accordion__content {
-  padding: var(--accordion-item-content-padding) !important;
-  padding-top: calc(var(--accordion-item-header-content-gap, 0px) + var(--accordion-item-content-padding, 0px)) !important;
+  padding: var(--accordion-item-header-content-gap, 0px) var(--accordion-item-padding) var(--accordion-item-padding) !important;
   background: var(--accordion-item-content-bg) !important;
   color: var(--accordion-item-content-text) !important;
   font-family: var(--accordion-item-content-font-family) !important;
